edition = "2023";

package ginbot.utility;

option go_package = "github.com/CrescentKohana/GinBot/pkg/gen/proto";

import "google/protobuf/empty.proto";

enum HealthStatus {
  UNKNOWN = 0;
  OK = 1;
  ERROR = 2;
}

service UtilityService {
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResp);
  rpc Help(HelpReq) returns (HelpResp);
  rpc Ping(google.protobuf.Empty) returns (PingResp);
}

message HealthCheckResp {
  // Status of the service
  HealthStatus status = 1;
}

message HelpReq {
  // Command to get help for
  string command = 1;
}

message HelpResp {
  // Help message
  string message = 1;
}

message PingResp {
  // Pong message
  string message = 1;
}
